testdata/baselines/reference/submodule/conformance/checkExportsObjectAssignPrototypeProperty.errors.txt
validator.ts(3,25): error TS7016: Could not find a declaration file for module './mod1'. 'mod1.js' implicitly has an 'any' type.


==== validator.ts (1 errors) ====
    import "./";
    
    import Person = require("./mod1");
                            ~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './mod1'. 'mod1.js' implicitly has an 'any' type.
    
    const m1 = new Person("Name")
    
    m1.thing;
    m1.readonlyProp;
    m1.rwAccessors;
    m1.readonlyAccessor;
    m1.setonlyAccessor;
    
    // allowed assignments
    m1.thing = 10;
    m1.rwAccessors = 11;
    m1.setonlyAccessor = "yes";
    
    // disallowed assignments
    m1.readonlyProp = "name";
    m1.readonlyAccessor = 12;
    m1.thing = "no";
    m1.rwAccessors = "no";
    m1.setonlyAccessor = 0;
    
    
==== mod1.js (0 errors) ====
    /**
     * @constructor
     * @param {string} name
     */
    function Person(name) {
        this.name = name;
    }
    Person.prototype.describe = function () {
        return "Person called " + this.name;
    };
    Object.defineProperty(Person.prototype, "thing", { value: 42, writable: true });
    Object.defineProperty(Person.prototype, "readonlyProp", { value: "Smith", writable: false });
    Object.defineProperty(Person.prototype, "rwAccessors", { get() { return 98122 }, set(_) { /*ignore*/ } });
    Object.defineProperty(Person.prototype, "readonlyAccessor", { get() { return 21.75 } });
    Object.defineProperty(Person.prototype, "setonlyAccessor", {
        /** @param {string} str */
        set(str) {
            this.rwAccessors = Number(str)
        }
    });
    module.exports = Person;
    